--- a/index.html
+++ b/index.html
@@ -1020,7 +1020,7 @@
 				<div class="editions__content">
 					<div class="editions__filter">
 						<h2 class="editions__title title">Издания</h2>
-						<h2 class="category__list-title js-check-heading">Категории</h2>
+						<h2 class="category__list-title js-check-heading">Категории <span class="category-title__arrow"></span></h2>
 						<ul class="editions__all-category">
 							<li class="editions__elem ed__elem-1">
 
